Fixing all the image paths to ensure new namespacing works properly

--- a/web/platform/css/style.css
+++ b/web/platform/css/style.css
@@ -135,18 +135,21 @@ h1, h2, h3, h4, h5, h6, p, span, a {
 #infobarContainer {
   width: 33%;
   position: absolute;
+  z-index: 99;
   right: -33%;
   margin-top: 0;
   margin-right:0px;
   height: 450px;
   top: 150px;
-  background-color:#333;
-  color:#fff;
+  color: #fff;
   transition: all 0.5s ease;
   opacity: 0.95;
   height: auto !important;
   min-height: 20%;
   padding-bottom: 40px;
+  background-color: #283139;
+  border: 4px solid #EFD01B;
+  box-shadow: 0 2px 26px 0 rgba(0, 0, 0, 0.2);
 }
 
 #infobarContainer.emerge {
